APP : Withdraw options should be toggle button APP : Add label and class to getTableEditableContent BUG : Add new handler because all input has default text handler (autoAdaptWidth)

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -320,21 +320,66 @@ table.sortable tr.header, table.sortable tr:hover {
   to {bottom: 0; opacity: 0;}
 }
 
+
+/* Toggle switch */
+input[type=checkbox][class=toggle] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
+}
+input[type=checkbox][class=toggle]:focus {
+  outline: 0;
+}
+
+.toggle {
+  height: 32px;
+  width: 52px;
+  border-radius: 16px;
+  display: inline-block;
+  position: relative;
+  margin: 10px 10px;
+  border: 2px solid #ccc;
+  background: #ccc;
+  transition: all 0.2s ease;
+}
+.toggle:after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: white;
+  box-shadow: 0 1px 2px rgba(44, 44, 44, 0.2);
+  transition: all 0.2s cubic-bezier(0.5, 0.1, 0.75, 1.35);
+}
+.toggle:checked {
+  border-color: #2196F3;
+  background: #2196F3;
+}
+.toggle:checked:after {
+  transform: translatex(20px);
+}
+
+
 /* The switch - the box around the slider */
-.switch {
+/* .switch {
   position: relative;
   display: inline-block;
   width: 30px;
   height: 17px;
-}
+} */
 
 /* Hide default HTML checkbox */
-.switch input {
+/* .switch input {
   display:none;
-}
+} */
 
 /* The slider */
-.slider {
+/* .slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -370,16 +415,16 @@ input:checked + .slider:before {
   -webkit-transform: translateX(13px);
   -ms-transform: translateX(13px);
   transform: translateX(13px);
-}
+} */
 
 /* Rounded sliders */
-.slider.round {
+/* .slider.round {
   border-radius: 34px;
 }
 
 .slider.round:before {
   border-radius: 50%;
-}
+} */
 
 /* Tooltip */
 .tooltip {
@@ -500,7 +545,7 @@ input::-webkit-inner-spin-button {
   margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
 
-input{
+input[type="text"] {
   outline: 0px;
   border: 0px;
   width: 100px;
@@ -510,7 +555,7 @@ input{
   background-color: transparent;
 }
 
-input:hover, input:focus {
+input[type="text"]:hover, input[type="text"]:focus {
   min-width: 35px;
   animation: expand 0.5s;
   background-color: white;
